--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.mycompany</groupId>
-	<artifactId>DevOppsDemoAuto</artifactId>
+	<artifactId>DevOppsDemo</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>mule-application</packaging>
 
@@ -30,7 +30,7 @@
 						<muleVersion>4.2.0</muleVersion>
 						<username>yashi0108</username>
 						<password>Hkgandhi123</password>
-						<applicationName>DevOppsDemoAuto</applicationName>
+						<applicationName>UsecaseDevOpps</applicationName>
 						<environment>Sandbox</environment>
 						<workerType>Micro</workerType>
                         <workers>1</workers>
